rstsr-mkl-ffi/src/cblas/ffi_extern.rs

    pub fn cblas_zgemm(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_zgemm3m(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_zgemm_batch(
        Layout: CBLAS_LAYOUT,
        TransA_Array: *const CBLAS_TRANSPOSE,
        TransB_Array: *const CBLAS_TRANSPOSE,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        K_Array: *const MKL_INT,
        alpha_Array: *const c_void,
        A_Array: *mut *const c_void,
        lda_Array: *const MKL_INT,
        B_Array: *mut *const c_void,
        ldb_Array: *const MKL_INT,
        beta_Array: *const c_void,
        C_Array: *mut *mut c_void,
        ldc_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_zgemm_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        strideb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_zgemm3m_batch(
        Layout: CBLAS_LAYOUT,
        TransA_Array: *const CBLAS_TRANSPOSE,
        TransB_Array: *const CBLAS_TRANSPOSE,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        K_Array: *const MKL_INT,
        alpha_Array: *const c_void,
        A_Array: *mut *const c_void,
        lda_Array: *const MKL_INT,
        B_Array: *mut *const c_void,
        ldb_Array: *const MKL_INT,
        beta_Array: *const c_void,
        C_Array: *mut *mut c_void,
        ldc_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_zgemm3m_batch_strided(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        strideb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_zgemmt(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_zsymm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_zsyrk(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_zsyrk_batch(
        Layout: CBLAS_LAYOUT,
        Uplo_array: *const CBLAS_UPLO,
        Trans_array: *const CBLAS_TRANSPOSE,
        N_array: *const MKL_INT,
        K_array: *const MKL_INT,
        alpha_array: *const c_void,
        A_array: *mut *const c_void,
        lda_array: *const MKL_INT,
        beta_array: *const c_void,
        C_array: *mut *mut c_void,
        ldc_array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_zsyrk_batch_strided(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
        stridec: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_zsyr2k(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_ztrmm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *mut c_void,
        ldb: MKL_INT,
    );
    pub fn cblas_ztrmm_oop(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_ztrsm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *mut c_void,
        ldb: MKL_INT,
    );
    pub fn cblas_ztrsm_oop(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_ztrsm_batch(
        Layout: CBLAS_LAYOUT,
        Side_Array: *const CBLAS_SIDE,
        Uplo_Array: *const CBLAS_UPLO,
        Transa_Array: *const CBLAS_TRANSPOSE,
        Diag_Array: *const CBLAS_DIAG,
        M_Array: *const MKL_INT,
        N_Array: *const MKL_INT,
        alpha_Array: *const c_void,
        A_Array: *mut *const c_void,
        lda_Array: *const MKL_INT,
        B_Array: *mut *mut c_void,
        ldb_Array: *const MKL_INT,
        group_count: MKL_INT,
        group_size: *const MKL_INT,
    );
    pub fn cblas_ztrsm_batch_strided(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        stridea: MKL_INT,
        B: *mut c_void,
        ldb: MKL_INT,
        strideb: MKL_INT,
        batch_size: MKL_INT,
    );
    pub fn cblas_chemm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_cherk(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f32,
        A: *const c_void,
        lda: MKL_INT,
        beta: f32,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_cher2k(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: f32,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_zhemm(
        Layout: CBLAS_LAYOUT,
        Side: CBLAS_SIDE,
        Uplo: CBLAS_UPLO,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: *const c_void,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_zherk(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f64,
        A: *const c_void,
        lda: MKL_INT,
        beta: f64,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_zher2k(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        Trans: CBLAS_TRANSPOSE,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        B: *const c_void,
        ldb: MKL_INT,
        beta: f64,
        C: *mut c_void,
        ldc: MKL_INT,
    );
    pub fn cblas_sgemm_pack_get_size(
        identifier: CBLAS_IDENTIFIER,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
    ) -> usize;
    pub fn cblas_sgemm_pack(
        Layout: CBLAS_LAYOUT,
        identifier: CBLAS_IDENTIFIER,
        Trans: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f32,
        src: *const f32,
        ld: MKL_INT,
        dest: *mut f32,
    );
    pub fn cblas_sgemm_compute(
        Layout: CBLAS_LAYOUT,
        TransA: MKL_INT,
        TransB: MKL_INT,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        A: *const f32,
        lda: MKL_INT,
        B: *const f32,
        ldb: MKL_INT,
        beta: f32,
        C: *mut f32,
        ldc: MKL_INT,
    );
    pub fn cblas_dgemm_pack_get_size(
        identifier: CBLAS_IDENTIFIER,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
    ) -> usize;
    pub fn cblas_dgemm_pack(
        Layout: CBLAS_LAYOUT,
        identifier: CBLAS_IDENTIFIER,
        Trans: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f64,
        src: *const f64,
        ld: MKL_INT,
        dest: *mut f64,
    );
    pub fn cblas_dgemm_compute(
        Layout: CBLAS_LAYOUT,
        TransA: MKL_INT,
        TransB: MKL_INT,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        A: *const f64,
        lda: MKL_INT,
        B: *const f64,
        ldb: MKL_INT,
        beta: f64,
        C: *mut f64,
        ldc: MKL_INT,
    );
    pub fn cblas_hgemm(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        TransB: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
        alpha: MKL_F16,
        A: *const MKL_F16,
        lda: MKL_INT,
        B: *const MKL_F16,
        ldb: MKL_INT,
        beta: MKL_F16,
        C: *mut MKL_F16,
        ldc: MKL_INT,
    );
    pub fn cblas_hgemm_pack_get_size(
        identifier: CBLAS_IDENTIFIER,
        M: MKL_INT,
        N: MKL_INT,
        K: MKL_INT,
    ) -> usize;
